# smartvideo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
src/smartvideo/sv/: api.py  cli.py
src/smartvideo/sv/core/: config.py
src/smartvideo/sv/core/services/: process.py
src/smartvideo/ui/: app.py
src/smartvideo/ui/components/: html5_player.py
src/sv/: api.py  cli.py
src/sv/core/: config.py
src/sv/core/services/: process.py
src/ui/: app.py
src/ui/components/: html5_player.py
tests/: test_basic.py
